js/js.translator/testData/incremental/invalidation/addMethodToInterfaceWithConsumer/main/impl.0.kt
import sample.I

class Impl : I {
    override fun foo(): Int = 42
}
